adding the pages and pictures to the project

--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Poeta Valéria</title>
+    <title>Valéria Barbosa</title>
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="\Users\natan\OneDrive\Área de Trabalho\projects\project0\style.css" rel="stylesheet" type="text/css">
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
   </head>
   <body>
     <header>
-			  <h1>Valéria barbosa</h1>
-        <ul css="nav nav-pills">
-          <li class="nav-item">
-            <a class="nav-link active" href="/index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/books.html">Livros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/soiree.html">Sarau na Favela</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pictures.html">Imagens</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/songs.html">Imagens</a>
-          </li>
-        </ul>
+      <div id="page_layout">
+				<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\mask.jpg" alt="Valéria's logo" id="color_mask">
+        <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\logo.png" alt="Valéria's logo" class="img-fluid">
+        <h1 id="name">Valéria</h1> <h1 id="last_name">Barbosa</h1>
+      </div>
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/books.html">Livros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/soiree.html">Sarau na Favela</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/songs.html">Músicas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/paints.html">Arte Gráfica</a>
+        </li>
+      </ul>
     </header>
+		<main>
+			<div id="about" class="container-md">
+				<div class="row">
+					<div class="col-sm-6">
+						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\valeria.jpeg" alt="Valéria's about image" id="valeria_img">
+					</div>
+					<div class="col-sm-6">
+						<h2>Sobre Valéria</h2>
+						<p><span>Sou</span> Valéria Barbosa, mãe de três filhos, profissional da área de educação, atuo há 45 anos na comunidade da Cidade de Deus, Rio de Janeiro, gosto de fazer poemas, compor, desenhar, pintar, cantar, cozinhar, gosto de esquentar os verbos na ação.<br>
+							<span>Este </span>é o meu primeiro livro de poemas. Juntei duzentos poemas libertários.<br>
+							<span>As </span>letras cumprem além do registro, são partes de dores e alegrias intensas, suor, lagrima e sangue que os olhos viram na favela.<br>
+							<span>O </span>tema do concurso, “200 anos da Independência do Brasil”, levou-me a pensar no bicentenário da minha Pátria e me fez reconhecer o quanto o passado grita no presente.  Tenho mais de seis décadas de vida e alguns anos de informações torcidas e distorcidas do processo de colonização. Pensar em vida, em desenvolvimento, é pensar em ocupação de contexto urbano e rural que dependem da sua fauna, flora e das nascentes, é pensar em biodiversidade.  É pensar nas questões sociais tão esquecidas na prática das políticas públicas, é saber que somos seres plenos em diversidades e principalmente com a memória ecoando em nossa trajetória. É pensar também em negligência com desenvolvimento do País: do descuido com a educação, saúde e patrimônio cultural pelos gestores públicos. É chorar em poesia, é ter que tirar da garganta o grito para dar voz ao Direito de existir.<br>
+							<span>A </span>vida pulsante faz reflexo nas minhas poesias.</p>
+					</div>
+				</div>
+			</div>	
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa48nyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
