book page partially done, changed some styling

--- a/books.html
+++ b/books.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sobre - Valéria Barbosa</title>
+    <title>Livros - Valéria Barbosa</title>
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="\Users\natan\OneDrive\Área de Trabalho\projects\project0\style.css" rel="stylesheet" type="text/css">
@@ -33,25 +33,27 @@
       </ul>
     </header>
 		<main>
-			<div id="about" class="container-md">
+			<div id="books" class="container-md">
 				<div class="row">
-					<div class="col-sm-6">
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\valeria.jpeg" alt="Valéria's about image" class="valeria_img">
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\valeria_2.jfif" alt="Valéria's about image" class="valeria_img">
+					<div class="col-sm-4">
+						<h3 id='warrior'>Guerreira</h3>	
+						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\warrior.jfif" alt="Guerreira" class="book_img">
 					</div>
-					<div id="about_text" class="col-sm-6">
-						<h2 id='about_title'>Sobre Valéria</h2>
-						<blockquote class="blockquote">
-								<p class="mb-0"><span>Sou</span> Valéria Barbosa, mãe de três filhos, profissional da área de educação, atuo há 45 anos na comunidade da Cidade de Deus, Rio de Janeiro, gosto de fazer poemas, compor, desenhar, pintar, cantar, cozinhar, gosto de esquentar os verbos na ação.<br>
-								<span>As </span>letras cumprem além do registro, são partes de dores e alegrias intensas, suor, lagrima e sangue que os olhos viram na favela.<br>
-								<span>O </span>tema do concurso, “200 anos da Independência do Brasil”, levou-me a pensar no bicentenário da minha Pátria e me fez reconhecer o quanto o passado grita no presente.  Tenho mais de seis décadas de vida e alguns anos de informações torcidas e distorcidas do processo de colonização. Pensar em vida, em desenvolvimento, é pensar em ocupação de contexto urbano e rural que dependem da sua fauna, flora e das nascentes, é pensar em biodiversidade.  É pensar nas questões sociais tão esquecidas na prática das políticas públicas, é saber que somos seres plenos em diversidades e principalmente com a memória ecoando em nossa trajetória. É pensar também em negligência com desenvolvimento do País: do descuido com a educação, saúde e patrimônio cultural pelos gestores públicos. É chorar em poesia, é ter que tirar da garganta o grito para dar voz ao Direito de existir.<br>
-								<span>A </span>vida pulsante faz reflexo nas minhas poesias.</p>
-							<footer class="blockquote-footer">Valéria Barbosa em <cite title="Source Title">200 Gritos por Liberdade</cite></footer>
-						</blockquote>
+					<div class="col-sm-4">
+						<h3 id='locked_heart'>Coração Preso</h3>
+						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\lockedheart.jfif" alt="Coração Preso" class="book_img">
+					</div>
+          <div class="col-sm-4">
+						<h3 id='great_masters'>Grandes Mestres da CDD</h3>
+						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\greatmasters.jpg" alt="Grandes mestres" class="book_img">
+					</div>
+					<div class="col-sm-4">
+						<h3 id='liberty'>200 Gritos por Liberdade</h3>
+						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\liberdade.jfif" alt="200 Gritos por Liberdade" class="book_img">
 					</div>
 				</div>
 			</div>
-		</main>	
+    </main>	
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa48nyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
