--- a/books.html
+++ b/books.html
@@ -34,22 +34,26 @@
     </header>
 		<main>
 			<div id="books" class="container-md">
-				<div class="row">
-					<div class="col-sm-4">
-						<h3 id='warrior'>Guerreira</h3>	
+				<div id="book_imgs" class="row">
+					<div class="col-sm-3">	
 						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\warrior.jfif" alt="Guerreira" class="book_img">
+            <h2 id='warrior'>Guerreira</h2>
+            <p id='warrior_desc'>Meu primeiro livro de poesias.<br>Publicado em 1995, conta com 56 poesias de minha autoria.</p>
 					</div>
-					<div class="col-sm-4">
-						<h3 id='locked_heart'>Coração Preso</h3>
+					<div class="col-sm-3">
 						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\lockedheart.jfif" alt="Coração Preso" class="book_img">
+            <h2 id='locked_heart'>Coração Preso</h2>
+            <p id='locked_heart_desc'>Coração Preso foi publicado em 2012. Relata a remoção de sessenta e uma favelas da zona sul para diversas partes do Rio de Janeiro, onde famílias foram tranferidas em caminhões de lixo, a partir da perspectiva de Valéria Barbosa quando tinha apenas 12 anos de idade.</p>
 					</div>
-          <div class="col-sm-4">
-						<h3 id='great_masters'>Grandes Mestres da CDD</h3>
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\greatmasters.jpg" alt="Grandes mestres" class="book_img">
+          <div class="col-sm-3">
+					  <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\greatmasters.jpg" alt="Grandes mestres" class="book_img">
+            <h2 id='great_masters'>Os Grandes Mestres Guardiões da CDD</h2>
+            <p id='great_masters_desc'>Os Grandes Mestres Guardiões da Cidade de Deus foi publicado em 2012 para homenagear e contar a história dos grandes mestres da Cidade de Deus. Valéria busca contar um pouco da história de Algumas das figuras mais emblemáticas da Cidade de Deus, ressaltando a contribuição de cada um para a cultura local.</p>
 					</div>
-					<div class="col-sm-4">
-						<h3 id='liberty'>200 Gritos por Liberdade</h3>
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\liberdade.jfif" alt="200 Gritos por Liberdade" class="book_img">
+					<div class="col-sm-3">
+            <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\liberdade.jfif" alt="200 Gritos por Liberdade" class="book_img">
+            <h2 id='liberty'>200 Gritos por Liberdade</h2>
+            <p id='liberty_desc'>200 Gritos por Liberdade foi o último livro publicado por Valéria.</p>
 					</div>
 				</div>
 			</div>
