removed one link and finished the soiree page

--- a/paints.html
+++ b/paints.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Livros - Valéria Barbosa</title>
+    <title>Sobre - Valéria Barbosa</title>
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="\Users\natan\OneDrive\Área de Trabalho\projects\project0\style.css" rel="stylesheet" type="text/css">
@@ -30,31 +30,8 @@
       </ul>
     </header>
 		<main>
-			<div id="books" class="container-md">
-				<div id="book_imgs" class="row">
-					<div class="col-sm-3">	
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\warrior.jfif" alt="Guerreira" class="book_img">
-            <h2 id='warrior'>Guerreira</h2>
-            <p id='warrior_desc'>Meu primeiro livro de poesias.<br>Publicado em 1995, conta com 56 poesias de minha autoria.</p>
-					</div>
-					<div class="col-sm-3">
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\lockedheart.jfif" alt="Coração Preso" class="book_img">
-            <h2 id='locked_heart'>Coração Preso</h2>
-            <p id='locked_heart_desc'>Coração Preso foi publicado em 2012. Relata a remoção de sessenta e uma favelas da zona sul para diversas partes do Rio de Janeiro, onde famílias foram tranferidas em caminhões de lixo, a partir da perspectiva de Valéria Barbosa quando tinha apenas 12 anos de idade.</p>
-					</div>
-          <div class="col-sm-3">
-					  <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\greatmasters.jpg" alt="Grandes mestres" class="book_img">
-            <h2 id='great_masters'>Os Grandes Mestres Guardiões da CDD</h2>
-            <p id='great_masters_desc'>Os Grandes Mestres Guardiões da Cidade de Deus foi publicado em 2012 para homenagear e contar a história dos grandes mestres da Cidade de Deus. Valéria busca contar um pouco da história de Algumas das figuras mais emblemáticas da Cidade de Deus, ressaltando a contribuição de cada um para a cultura local.</p>
-					</div>
-					<div class="col-sm-3">
-            <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\liberdade.jfif" alt="200 Gritos por Liberdade" class="book_img">
-            <h2 id='liberty'>200 Gritos por Liberdade</h2>
-            <p id='liberty_desc'>200 Gritos por Liberdade foi o último livro publicado por Valéria.</p>
-					</div>
-				</div>
-			</div>
-    </main>	
+
+		</main>	
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa48nyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
