finished the webpage. need to add more paints in the last page of the project.

--- a/books.html
+++ b/books.html
@@ -4,28 +4,28 @@
     <title>Livros - Valéria Barbosa</title>
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="\Users\natan\OneDrive\Área de Trabalho\projects\project0\style.css" rel="stylesheet" type="text/css">
+    <link href=".\style.css" rel="stylesheet" type="text/css">
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
   </head>
   <body>
     <header>
       <div id="page_layout">
-				<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\mask.jpg" alt="Valéria's logo" id="color_mask">
-        <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\logo.png" alt="Valéria's logo" class="img-fluid">
+				<img src=".\images\mask.jpg" alt="Valéria's logo" id="color_mask">
+        <img src=".\images\logo.png" alt="Valéria's logo" class="img-fluid">
         <h1 id="name">Valéria</h1> <h1 id="last_name">Barbosa</h1>
       </div>
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" href="/index.html">Sobre</a>
+          <a class="nav-link" href=".\index.html">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/books.html">Livros</a>
+          <a class="nav-link active" href=".\books.html">Livros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/soiree.html">Sarau na Favela</a>
+          <a class="nav-link" href=".\soiree.html">Sarau na Favela</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/paints.html">Arte Gráfica</a>
+          <a class="nav-link" href=".\paints.html">Arte Gráfica</a>
         </li>
       </ul>
     </header>
@@ -33,22 +33,22 @@
 			<div id="books" class="container-md">
 				<div id="book_imgs" class="row">
 					<div class="col-sm-3">	
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\warrior.jfif" alt="Guerreira" class="book_img">
+						<img src=".\images\warrior.jfif" alt="Guerreira" class="book_img">
             <h2 id='warrior'>Guerreira</h2>
             <p id='warrior_desc'>Meu primeiro livro de poesias.<br>Publicado em 1995, conta com 56 poesias de minha autoria.</p>
 					</div>
 					<div class="col-sm-3">
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\lockedheart.jfif" alt="Coração Preso" class="book_img">
+						<img src=".\images\lockedheart.jfif" alt="Coração Preso" class="book_img">
             <h2 id='locked_heart'>Coração Preso</h2>
             <p id='locked_heart_desc'>Coração Preso foi publicado em 2012. Relata a remoção de sessenta e uma favelas da zona sul para diversas partes do Rio de Janeiro, onde famílias foram tranferidas em caminhões de lixo, a partir da perspectiva de Valéria Barbosa quando tinha apenas 12 anos de idade.</p>
 					</div>
           <div class="col-sm-3">
-					  <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\greatmasters.jpg" alt="Grandes mestres" class="book_img">
+					  <img src=".\images\greatmasters.jpg" alt="Grandes mestres" class="book_img">
             <h2 id='great_masters'>Os Grandes Mestres Guardiões da CDD</h2>
             <p id='great_masters_desc'>Os Grandes Mestres Guardiões da Cidade de Deus foi publicado em 2012 para homenagear e contar a história dos grandes mestres da Cidade de Deus. Valéria busca contar um pouco da história de Algumas das figuras mais emblemáticas da Cidade de Deus, ressaltando a contribuição de cada um para a cultura local.</p>
 					</div>
 					<div class="col-sm-3">
-            <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\liberdade.jfif" alt="200 Gritos por Liberdade" class="book_img">
+            <img src=".\images\liberdade.jfif" alt="200 Gritos por Liberdade" class="book_img">
             <h2 id='liberty'>200 Gritos por Liberdade</h2>
             <p id='liberty_desc'>200 Gritos por Liberdade foi o último livro publicado por Valéria.</p>
 					</div>
