--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <title>Sobre - Valéria Barbosa</title>
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="\Users\natan\OneDrive\Área de Trabalho\projects\project0\style.css" rel="stylesheet" type="text/css">
+    <link href=".\style.css" rel="stylesheet" type="text/css">
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
   </head>
   <body>
     <header>
       <div id="page_layout">
-				<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\mask.jpg" alt="Valéria's logo" id="color_mask">
-        <img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\logo.png" alt="Valéria's logo" class="img-fluid">
+				<img src=".\images\mask.jpg" alt="Valéria's logo" id="color_mask">
+        <img src=".\images\logo.png" alt="Valéria's logo" class="img-fluid">
         <h1 id="name">Valéria</h1> <h1 id="last_name">Barbosa</h1>
       </div>
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" href="/index.html">Sobre</a>
+          <a class="nav-link active" href=".\index.html">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/books.html">Livros</a>
+          <a class="nav-link" href=".\books.html">Livros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/soiree.html">Sarau na Favela</a>
+          <a class="nav-link" href=".\soiree.html">Sarau na Favela</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/paints.html">Arte Gráfica</a>
+          <a class="nav-link" href=".\paints.html">Arte Gráfica</a>
         </li>
       </ul>
     </header>
@@ -33,8 +33,8 @@
 			<div id="about" class="container-md">
 				<div class="row">
 					<div class="col-sm-6">
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\valeria.jpeg" alt="Valéria's about image" class="valeria_img">
-						<img src="\Users\natan\OneDrive\Área de Trabalho\projects\project0\images\valeria_2.jfif" alt="Valéria's about image" class="valeria_img">
+						<img src=".\images\valeria.jpeg" alt="Valéria's about image" class="valeria_img">
+						<img src=".\images\valeria_2.jfif" alt="Valéria's about image" class="valeria_img">
 					</div>
 					<div id="about_text" class="col-sm-6">
 						<h2 id='about_title'>Sobre Valéria</h2>
