--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div id="about" class="container-md">
 				<div class="row">
 					<div class="col-sm-6">
-						<img src=".\images\valeria.jpeg" alt="Valéria's about image" class="valeria_img">
+						<img src=".\images\valeria.jpeg" id="valeria_first_image" alt="Valéria's about image" class="valeria_img">
 						<img src=".\images\valeria_2.jfif" alt="Valéria's about image" class="valeria_img">
 					</div>
 					<div id="about_text" class="col-sm-6">
