--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Sobre - Valéria Barbosa</title>
 		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href=".\style.css" rel="stylesheet" type="text/css">
+    <link href=".\style.scss" rel="stylesheet" type="text/scss">
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
   </head>
   <body>
